# telegram_food_boot

./: .env copy  .gitignore  README.md  pyproject.toml
src/telegram_food_boot/: bot.py  config.py  database.py  handlers.py  utils.py  webhook.py
src/telegram_food_boot/api/: auth.py  dependencies.py  main.py  models.py  routes.py
