[project]
name = "telegram-food-boot"
version = "0.1.0"
description = ""
authors = [{ name = "Marcelo Santos", email = "rocha.mer21@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot (>=22.2,<23.0)",
    "aiosqlite (>=0.20.0,<1.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "telegram_food_boot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
