[tool.poetry]
name = "telegram_food_boot"
version = "0.1.0"
description = "Bot e API para rastreamento de refeições e metas nutricionais"
authors = ["Marcello Santos <pacezinho@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = "^22.2"
aiohttp = "^3.9"
aiosqlite = "^0.20"
python-dotenv = "^1.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
