[tool.poetry]
name = "telegram_food_boot"
version = "0.1.0"
description = "Bot e API para rastreamento de refeições e metas nutricionais"
authors = ["Marcello Santos <pacezinho@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = { version = "^21.5", extras = ["webhooks"] }
aiohttp = "^3.12"
aiosqlite = "^0.20"
python-dotenv = "^1.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
passlib = "^1.7.4"
python-jose = "^3.3"
httpx = "^0.28.1"
bcrypt = "4.1.3"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
